feat: [no-stabled] [work] Class initialized